--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,12 +13,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "puppeteer": "^11.0.0",
+    "or": "^0.2.0",
+    "puppeteer": "^20.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -61,7 +62,7 @@
   },
   "devDependencies": {
     "cross-fetch": "^3.0.6",
-    "jest-puppeteer": "^4.4.0",
+    "jest-puppeteer": "^8.0.6",
     "npm-run-all": "^4.1.5"
   }
 }
